--- a/generalchair.html
+++ b/generalchair.html
@@ -44,8 +44,11 @@
           <a target="_blank" href="https://www.ieee.org/">
             <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
           </a>
-          <a target="_blank" href="https://www.ieee.org/">
-            <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="45">
+          <a target="_blank" href="https://www.ieee-ies.org/">
+            <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="45">
+          </a>
+          <a target="_blank" href="https://vlsisocietyofindia.org/">
+            <img style="height: 45px;" src="images/vlsi-logo.webp" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
           </a>
         </div>
       </div>
