--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -53,8 +53,11 @@
         <a target="_blank" href="https://www.ieee.org/">
           <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
-        <a target="_blank" href="https://www.ieee.org/">
+        <a target="_blank" href="https://www.ieee-ies.org/">
           <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="45">
+        </a>
+        <a target="_blank" href="https://vlsisocietyofindia.org/">
+          <img style="height: 45px;" src="images/vlsi-logo.webp" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
         </a>
       </div>
     </div>
@@ -276,6 +279,17 @@
                                                 <h2 class="text-lg font-bold">Prof. Pat Wheeler</h2>
                                                 <p class="text-sm text-gray-600">University of Nottingham, England</p>
                                                   </div>
+                                              
+                                                      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                                        <img src="images/didi.jpg" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                                        <h2 class="text-lg font-bold">Prof. Abdessamad DIDI</h2>
+                                                        <p class="text-sm text-gray-600">Hassan First University, Settat, Morocco</p>
+                                                          </div> 
+                                                          <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                                            <img src="images/PG.jpeg" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                                            <h2 class="text-lg font-bold">Prof. Prerna Gaur</h2>
+                                                            <p class="text-sm text-gray-600">Chair, IEEE India Council </p>
+                                                              </div>
     </div>
   </main>
   
