--- a/venue.html
+++ b/venue.html
@@ -61,8 +61,11 @@
         <a target="_blank" href="https://www.ieee.org/">
           <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
-        <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="45">
+        <a target="_blank" href="https://www.ieee-ies.org/">
+          <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="45">
+        </a>
+        <a target="_blank" href="https://vlsisocietyofindia.org/">
+          <img style="height: 45px;" src="images/vlsi-logo.webp" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
         </a>
       </div>
     </div>
@@ -286,14 +289,14 @@
               We recommend the following hotels located near the venue:
             </p>
             <ul class="list-disc list-inside text-left space-y-1">
-              <li>The Kannelite, Sakchi, Jamshedpur</li>
-              <li>The Kannelite, Sakchi, Jamshedpur</li>
-              <li>Fortune Park Centre Point, Sakchi, Jamshedpur</li>
-              <li>Ramada by Wyndham Gandhidham Shinay,Bistupur, Jamshedpur</li>
-              <li>Ginger, Bistupur, Jamshedpur</li>
-              <li>Hotel Sonnet, Bistupur, Jamshedpur</li>
-              <li>Motel Madhuban, Adityapur, Jamshedpur</li>
-              <li>Novanta, Adityapur, Jamshedpur</li>
+              <li>Novanta, Adityapur, Jamshedpur (3.1 KM away from NIT Jamshedpur)</li>
+              <li>Motel Madhuban, Adityapur, Jamshedpur (3.2 KM away from NIT Jamshedpur)</li>
+              <li>Ramada by Wyndham Gandhidham Shinay, Bistupur, Jamshedpur (5.7 KM away from NIT Jamshedpur)</li>
+              <li>Ginger, Bistupur, Jamshedpur (5.9 KM away from NIT Jamshedpur)</li>
+              <li>Hotel Sonnet, Bistupur, Jamshedpur (6.3 KM away from NIT Jamshedpur)</li>
+              <li>Fortune Park Centre Point, Bistupur, Jamshedpur (6.7 KM away from NIT Jamshedpur)</li>
+              <li>The Kannelite, Sakchi, Jamshedpur (8.5 KM away from NIT Jamshedpur)</li>
+              
             </ul>
           </div>
       
