--- a/sponsorship.html
+++ b/sponsorship.html
@@ -41,8 +41,11 @@
         <a target="_blank" href="https://www.ieee.org/">
           <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
-        <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="45">
+        <a target="_blank" href="https://www.ieee-ies.org/">
+          <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="45">
+        </a>
+        <a target="_blank" href="https://vlsisocietyofindia.org/">
+          <img style="height: 45px;" src="images/vlsi-logo.webp" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
         </a>
       </div>
     </div>
@@ -141,6 +144,9 @@
             </div>
             <div class="p-1 bg-white shadow-md rounded-lg text-center">
               <img src="images/NITJSRlOGO.png" alt="Member 1" class="w-30 h-40 mx-auto  mb-1 img-thumbnail">
+            </div>
+            <div class="p-1 bg-white shadow-md rounded-lg text-center">
+              <img src="images/vlsi-logo.webp" alt="Member 1" class="w-30 h-40 mx-auto  mb-1 img-thumbnail">
             </div>
           </div>
         </section>
