--- a/SS.html
+++ b/SS.html
@@ -291,8 +291,9 @@
     padding: 0px;
     padding-left: 0px;
     padding-bottom: 0px;
-    background: no-repeat padding-box border-box 50% / 84% scroll url("//static.wixstatic.com/media/c28d77_7c9d2afbf508424d8daa954a78265708~mv2.png/v1/fill/w_707,h_910,al_c/c28d77_7c9d2afbf508424d8daa954a78265708~mv2.png?formatterValues=c28d77_7c9d2afbf508424d8daa954a78265708~mv2.png,707,910")
+    background: no-repeat padding-box border-box 50% / 84% scroll url("")
 }
+
 
 /* START STYLABLE DIRECTIVE RULES */
 
@@ -419,7 +420,25 @@ These sessions will broaden the knowledge base of attendees, helping them stay u
 <span style="font-size:18px;" class="wixui-rich-text__text"><span style="font-family:helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;" class="wixui-rich-text__text"><span class="color_33 wixui-rich-text__text"><span style="font-weight:bold;" class="wixui-rich-text__text">Conflict of Interest</span></span></span></span><span style="font-size:18px;" class="wixui-rich-text__text"><span style="font-family:helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;" class="wixui-rich-text__text"><span class="color_33 wixui-rich-text__text">: </span></span></span><span style="font-size:18px;" class="wixui-rich-text__text"><span style="font-family:helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;" class="wixui-rich-text__text"><span style="color:#000000;" class="wixui-rich-text__text">Before starting the review process, SS organizers must explicitly declare papers which present a conflict of interest for them. A conflict of interest arises where the judgement of a paper quality can be influenced by the organizers being authors or knowing some of the authors. To ensure independent reviews, this conflict must be marked as such in the submission system and the SS Co-Chairs notified so that they can arrange the review process.</span></span></span><br class="wixui-rich-text__text">
 &nbsp;</h1></div><!--/$--></div></div></div><!--/$--><!--$-->
 
-<div id="comp-loiwyyvf7" class="comp-loiwyyvf7 YzqVVZ wixui-column-strip__column"><div id="bgLayers_comp-loiwyyvf7" data-hook="bgLayers" data-motion-part="BG_LAYER comp-loiwyyvf7" class="MW5IWV"><div data-testid="colorUnderlay" class="LWbAav Kv1aVt"></div><div id="bgMedia_comp-loiwyyvf7" data-motion-part="BG_MEDIA comp-loiwyyvf7" class="VgO9Yg"></div></div><div data-mesh-id="comp-loiwyyvf7inlineContent" data-testid="inline-content" class=""><div data-mesh-id="comp-loiwyyvf7inlineContent-gridContainer" data-testid="mesh-container-content"><!--$--><div id="comp-loiwyyvg5" class="comp-loiwyyvg5" data-semantic-classname="button"><a data-testid="linkElement" href="images/Special Session Template.pdf" target="_blank" class="StylableButton2545352419__root style-loj42cbn__root wixui-button StylableButton2545352419__link" aria-label="Call for Special Sessions"><span class="StylableButton2545352419__container"><span class="StylableButton2545352419__label wixui-button__label" data-testid="stylablebutton-label">Call for Special Sessions</span><span class="StylableButton2545352419__icon wixui-button__icon" aria-hidden="true" data-testid="stylablebutton-icon"><span><svg data-bbox="44.998 19.971 110.004 160.059" viewBox="0 0 200 200" height="200" width="200" xmlns="" data-type="shape">    
+
+
+
+<div id="comp-loiwyyvf7" class="comp-loiwyyvf7 YzqVVZ wixui-column-strip__column">
+  <div id="bgLayers_comp-loiwyyvf7" data-hook="bgLayers" data-motion-part="BG_LAYER comp-loiwyyvf7" class="MW5IWV">
+    <div data-testid="colorUnderlay" class="LWbAav Kv1aVt">
+    </div>
+    <div id="bgMedia_comp-loiwyyvf7" data-motion-part="BG_MEDIA comp-loiwyyvf7" class="VgO9Yg">
+    </div>
+  </div>
+  <div data-mesh-id="comp-loiwyyvf7inlineContent" data-testid="inline-content" class="">
+    <div data-mesh-id="comp-loiwyyvf7inlineContent-gridContainer" data-testid="mesh-container-content">
+      <div id="comp-loiwyyvg5" class="comp-loiwyyvg5" data-semantic-classname="button">
+        <a data-testid="linkElement" href="images/Special Session Template.pdf" target="_blank" class="StylableButton2545352419__root  StylableButton2545352419__link" aria-label="">
+          <span class="StylableButton2545352419__container">
+          <span class="StylableButton2545352419__label wixui-button__label" data-testid="stylablebutton-label"></span>
+          <span class="StylableButton2545352419__icon wixui-button__icon" aria-hidden="true" data-testid="stylablebutton-icon">
+          <span>
+          <svg data-bbox="44.998 19.971 110.004 160.059" viewBox="0 0 200 200" height="200" width="200" xmlns="" data-type="shape">    
   <g>
         <path d="M46.971 100.529l48.572 48.573c1.117 1.117 2.792 1.954 4.466 1.954 1.675 0 3.35-.558 4.466-1.954l48.573-48.573c1.117-1.117 1.954-2.792 1.954-4.466s-.837-3.07-1.954-4.466l-2.792-2.792c-2.513-2.513-6.753-2.513-8.986 0l-32.992 32.661V26.554c0-3.629-2.686-6.583-6.315-6.583h-4.187c-3.63 0-6.709 2.954-6.709 6.583v94.912L58.83 88.805c-2.513-2.513-6.628-2.513-8.861 0l-3.035 2.792c-1.117 1.117-1.936 2.792-1.936 4.466.001 1.675.577 3.35 1.973 4.466z"/>
         <path d="M148.303 162.819H51.996c-3.629 0-6.536 2.754-6.536 6.383v4.187c0 3.629 2.907 6.641 6.536 6.641h96.308c3.629 0 6.445-3.012 6.445-6.641v-4.187c-.001-3.629-3.096-6.383-6.446-6.383z"/>
@@ -434,10 +453,11 @@ These sessions will broaden the knowledge base of attendees, helping them stay u
 <!--/$--><!--$--><div id="comp-loixku98" class="HcOXKn c9GqVL QxJLC3 lq2cno YQcXTT comp-loixku98 wixui-rich-text" data-testid="richTextElement">
     <h1 class="font_0 wixui-rich-text__text" style="font-size:22px; text-align:center;"></h1>
         <span style="font-size:22px;" class="wixui-rich-text__text">
-            <span class="backcolor_11 wixui-rich-text__text">Call For Special Sessions</span>
+            <span class="backcolor_11 ">Call For Special Sessions</span>
         </span>
     </h1>
 </div>
+
 <!--/$--><!--$--><div id="comp-loiwyyvh7" class="KaEeLN comp-loiwyyvh7">
     <div class="uYj0Sg wixui-box" data-testid="container-bg">
     </div>
