--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -158,8 +158,8 @@
 
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/Atif.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
-        <h2 class="text-lg font-bold">Prof. Atif Iqbal</h2>
-        <p class="text-sm text-gray-600"> Qatar University, Doha, Qatar</p>
+        <h2 class="text-lg font-bold">Prof. Atif Iqbal, Fellow IEEE</h2>
+        <p class="text-sm text-gray-600">Qatar University, Doha, Qatar</p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/GC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
@@ -290,7 +290,26 @@
                                                             <h2 class="text-lg font-bold">Prof. Prerna Gaur</h2>
                                                             <p class="text-sm text-gray-600">Chair, IEEE India Council </p>
                                                               </div>
-    </div>
+                                                              <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                                                <img src="images/Kalam.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                                                <h2 class="text-lg font-bold">Prof. Akhtar Kalam   </h2>
+                                                                <p class="text-sm text-gray-600">Victoria University, Australia</p>
+                                                                  </div>
+    <div class="p-4 bg-white shadow-md rounded-lg text-center">
+      <img src="images/VKS.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+      <h2 class="text-lg font-bold">Prof. V. K. Sood </h2>
+      <p class="text-sm text-gray-600">Ontario Tech University, Oshawa, Canada </p>
+        </div>
+        <div class="p-4 bg-white shadow-md rounded-lg text-center">
+          <img src="images/SRS.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+          <h2 class="text-lg font-bold">Prof. Surender Reddy Salkuti</h2>
+          <p class="text-sm text-gray-600">Woosong University</p>
+            </div>
+            <div class="p-4 bg-white shadow-md rounded-lg text-center">
+              <img src="images/AKV.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+              <h2 class="text-lg font-bold">Prof. Ajit Kumar Verma </h2>
+              <p class="text-sm text-gray-600">Western Norway University of Applied Sciences</p>
+                </div>
   </main>
   
     <!-- Footer-->
