--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -193,7 +193,7 @@
       
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/veer.png" alt="Member 1" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
-        <h2 class="text-lg font-bold">Dr. Veerpratap Meena</h2>
+        <h2 class="text-lg font-bold">Dr. Veerpratap Meena, Fellow IEEE</h2>
         <p class="text-sm text-gray-600"><b>Assistant Professor, NIT Jamshedpur</b></p>
       </div>
     </div>
