--- a/generalchair.html
+++ b/generalchair.html
@@ -158,7 +158,7 @@
                 </p>
                 <p class="text-gray-600 mt-6">Warm regards, </p>
             
-                <h1 class="text-1xl text-normal font-bold mb-2 mt-12">Dr. Veerpratap Meena</h1>
+                <h1 class="text-1xl text-normal font-bold mb-2 mt-12">Dr. Veerpratap Meena, Fellow IEEE</h1>
                 <h1 class="text-1xl text-justify font-bold mb-1 mt-2">Assistant Professor,</h1>
                 <p class="text-1xl text-normal font-bold mb-1 mt-2">Department of Electrical Engineering</p>
                 <p class="text-1xl text-justify font-bold mb-1 mt-2">National Institute of Technology, Jamshedpur, India</p>
